--- a/src/components/banner/styles.css
+++ b/src/components/banner/styles.css
@@ -17,7 +17,7 @@
   height: 100%;
   width: 40%;
   border-radius: 20px;
-  background-image: url("../../assets/park.png");
+  background-image: url("../../assets/park.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
