--- a/src/components/report/styles.css
+++ b/src/components/report/styles.css
@@ -1,6 +1,6 @@
 .root {
   min-height: 80vh;
-  width: 90%;
+  width: 100%;
   box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
   margin: 5vh auto;
   border-radius: 20px;
@@ -16,12 +16,28 @@
 
 .form {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+.form .label:nth-child(13) {
+  grid-column: 1/3;
+}
+
+.form .label:nth-child(14) {
+  grid-column: 1/3;
 }
 
 .label {
   width: 100%;
+}
+
+.inputDate {
+  border-radius: 4px;
+  padding: 5px 10px;
+  text-align: center;
+  border: none;
+  min-width: 300px;
+  width: 100%;
+  height: 40px;
 }
